[gd_scene load_steps=4 format=3 uid="uid://dmksgl1segyhu"]

[ext_resource type="Script" path="res://scenes/game_ricochet_robot/ftg_richchet_robot.gd" id="1_ia871"]
[ext_resource type="PackedScene" uid="uid://dehqiuoqmmh3m" path="res://scenes/game_ricochet_robot/ricochet_robot_ui.tscn" id="2_l8rgv"]
[ext_resource type="PackedScene" uid="uid://c8g5fymta7uib" path="res://scenes/game_rush_hour/game_utils_game_timer.tscn" id="3_c13m2"]

[node name="FTGRichchetRobot" type="Node2D"]
script = ExtResource("1_ia871")

[node name="GameUtilsGameTimer" parent="." instance=ExtResource("3_c13m2")]
z_index = -1

[node name="FTGRicochetRobotUI" parent="." instance=ExtResource("2_l8rgv")]

[connection signal="game_clear" from="." to="." method="game_cleared"]
[connection signal="pause_timer" from="." to="GameUtilsGameTimer" method="pause_timer"]
[connection signal="request_disable_input" from="." to="FTGRicochetRobotUI" method="receive_request_disable_input"]
[connection signal="request_generate_goal_ui" from="." to="FTGRicochetRobotUI" method="receive_request_generate_goal_ui"]
[connection signal="request_generate_robots_ui" from="." to="FTGRicochetRobotUI" method="receive_request_generate_robots_ui"]
[connection signal="request_generate_wall_ui" from="." to="FTGRicochetRobotUI" method="receive_request_generate_wall_ui"]
[connection signal="request_move_robot_ui" from="." to="FTGRicochetRobotUI" method="receive_request_move_robot_ui"]
[connection signal="request_reset_ui" from="." to="FTGRicochetRobotUI" method="receive_request_reset_ui"]
[connection signal="resume_timer" from="." to="GameUtilsGameTimer" method="resume_timer"]
[connection signal="start_timer" from="." to="GameUtilsGameTimer" method="start_timer"]
[connection signal="timeout" from="GameUtilsGameTimer" to="." method="_on_game_utils_game_timer_timeout"]
[connection signal="deliver_move_finished_to_game" from="FTGRicochetRobotUI" to="." method="receive_move_finished"]
[connection signal="request_cell_pressed_to_game" from="FTGRicochetRobotUI" to="." method="receive_request_cell_pressed"]
